--- a/index.html
+++ b/index.html
@@ -11,22 +11,27 @@
 
     <div id="app">
 
-      <div class="">
+      <div class="title">
+        <i class="fas fa-clipboard-list"></i>
+        <h1>To Do List</h1>
+      </div>
+
+      <div class="add">
         <input v-model="todo" placeholder="Scrivi una nota..." @keypress.enter="addTodo">
         <button type="button" @click="addTodo">Aggiungi</button>
       </div>
 
-      <div class="">
+      <div class="new-todo">
         <div v-if="listTodo.length === 0" class="default-msg">
           Le note aggiunte vengono visualizzate qui
         </div>
 
-        <div v-for="(element,i) in listTodo">
-          <div class="">
+        <div class="element-to-do" v-for="(element,i) in listTodo">
+          <div class="add-todo">
             {{listTodo[i]}}
           </div>
-          <div class="" @click="removeTodo(i)">
-            <i class="fas fa-times"></i>
+          <div class="remove" @click="removeTodo(i)">
+            <i class="far fa-trash-alt"></i>
           </div>
         </div>
       </div>
