--- a/index.html
+++ b/index.html
@@ -26,15 +26,18 @@
         <div v-if="listTodo.length === 0" class="default-msg">
           Le note aggiunte vengono visualizzate qui
         </div>
+         <transition name="fade">
+          <div class="element-to-do" v-for="(element,i) in listTodo" >
 
-        <div class="element-to-do" v-for="(element,i) in listTodo">
-          <div class="add-todo">
-            {{listTodo[i]}}
+            <div class="add-todo">
+              {{listTodo[i]}}
+            </div>
+
+            <div class="remove" @click="removeTodo(i)">
+              <i class="far fa-trash-alt"></i>
+            </div>
+          </transition>
           </div>
-          <div class="remove" @click="removeTodo(i)">
-            <i class="far fa-trash-alt"></i>
-          </div>
-        </div>
       </div>
 
     </div>
