--- a/index.html
+++ b/index.html
@@ -24,20 +24,18 @@
 
       <div class="new-todo">
         <div v-if="listTodo.length === 0" class="default-msg">
-          Le note aggiunte vengono visualizzate qui
+          <p>Le note aggiunte vengono visualizzate qui</p>
         </div>
-         <transition name="fade">
-          <div class="element-to-do" v-for="(element,i) in listTodo" >
-
+        <transition-group tag='ul' name="fade">
+          <div class="element-to-do" v-for="(element,i) in listTodo" :key="element">
             <div class="add-todo">
               {{listTodo[i]}}
             </div>
-
             <div class="remove" @click="removeTodo(i)">
               <i class="far fa-trash-alt"></i>
             </div>
-          </transition>
           </div>
+        </transition-group>
       </div>
 
     </div>
