--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
   <body>
 
     <div id="app">
-
+      <!-- Titolo -->
       <div class="title">
         <i class="fas fa-clipboard-list"></i>
         <h1>To Do List</h1>
       </div>
-
+      <!-- Inpunt nuovo to do nella lista -->
       <div class="add">
         <input v-model="todo" placeholder="Scrivi una nota..." @keypress.enter="addTodo">
         <button type="button" @click="addTodo">Aggiungi</button>
       </div>
-
+      <!-- Lista to do -->
       <div class="new-todo">
         <div v-if="listTodo.length === 0" class="default-msg">
           <p>Le note aggiunte vengono visualizzate qui</p>
